[package]
name = "server"
version = "0.1.0"
edition = "2024"
default-run = "server"

[dependencies]
image = { version = "0.25", features = ["gif"] }
tokio = { version = "1.37", features = ["macros", "net", "io-util", "rt-multi-thread", "sync", "time"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde_json = "1.0"
